# samples

./: .gitignore  LICENSE  README.md
bi-tools/redash/: docker-compose.yml
bi-tools/superset/: docker-compose.yml
cpp/algorithm-and-data-structures/: CMakeLists.txt  eval.cpp  eval.h  main.cpp  max_diff.cpp  max_diff.h  q2-5.cpp  search.cpp  search.h  sort.h  sort.hpp  strings.cpp  strings.h
dart/basis/: .gitignore  README.md  pubspec.yaml
docker/postgres/: Dockerfile  compose.yml  docker-compose.yml  pg-parquet-init.sql  postgresql.conf
docker/superset/: docker-compose.yml
docker/yugabyte/: Dockerfile  docker-compose.yml
golang/basis/: .gitignore  composite.go  interface.go  template.go  variable.go
golang/scratch/: Dockerfile  Makefile  README.md  main.go
k6/: biome.json  package-lock.json  package.json  tsconfig.json  webpack.config.ts
k6/src/: index.ts
protocol-buffers/: nobid.proto
python/dataclass/: inheritance.py  main.py
python/django/: .gitignore  compose.yml  curl.http  db.sqlite3  execute_dummy_data.sh  insert_dummy_data.sql  insert_dummy_data_sqlite.sql  perf.md  pyproject.toml  service-monitoring-algorithm.md
python/django/.claude/: settings.local.json
python/django/app/: settings.py  urls.py
python/django/blog/: models.py  urls.py  views.py
python/django/blog/management/commands/: insert_dummy_data.py
python/django/blog/migrations/: 0001_initial.py
python/django/perf/: models.py  urls.py  views.py
python/django/perf/management/commands/: insert_dummy_data.py
python/django/perf/migrations/: 0001_initial.py  0002_remove_dataframes_datasource_id_and_more.py
python/django/sample/: settings.py  urls.py
python/duckdb-macros/: .dockerignore  Dockerfile  README.md  compose.yml  main.py  pyproject.toml  text2date.py  text2datetime.py  text2int.py  text2time.py
python/keras/: dataset.py  predict.py  requirements.txt  setup.cfg  train.py
python/misc/: mat.py  pyproject.toml
rust/grpc-web/server/: .dockerignore  .gitignore  Cargo.toml  about.toml  build.rs
rust/grpc-web/server/src/: main.rs  proto.rs  service.rs
rust/tonic/: Cargo.toml
rust/tonic/client/: .gitignore  Dockerfile  client.py  codegen.sh  pyproject.toml
rust/tonic/proto/: message.proto  service.proto
rust/tonic/src/: main.rs  service.rs
scala/: .gitignore  build.sbt
typescript/: README.md  package-lock.json  package.json  tsconfig.json  webpack.config.ts
(+190 files in other folders)
