[package]
name = "tonic-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.88", features = ["backtrace", "std"] }
async-stream = { version = "0.3.5" }
duckdb = { version = "1.0.0", features = ["bundled"] }
env_logger = { version = "0.11.5" }
# futures = "0.3.30"
futures-core = { version = "0.3.30" }
log = { version = "0.4.22" }
prost = { version = "0.13.2" }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "sync" ] }
tokio-stream = { version = "0.1.16" }
tonic = { version = "0.12.2" }


[build-dependencies]
tonic-build = { version = "0.12.2" }
