[package]
name = "sample"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace", "std"] }
async-stream = { version = "0.3.6" }
clap = { version = "4.5.30", features = ["derive"] }
env_logger = { version = "0.11.6" }
futures-core = { version = "0.3.31" }
log = { version = "0.4.25" }
prost = { version = "0.13.5" }
thiserror = { version = "2.0.11" }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "sync" ] }
tokio-stream = { version = "0.1.17" }
tonic = { version = "0.12.3" }
tonic-health = { version = "0.12.3" }
tonic-web = { version = "0.12.3" }


[build-dependencies]
tonic-build = { version = "0.12.3" }
